vlib/v/parser/tests/select_bad_key_1.out
vlib/v/parser/tests/select_bad_key_1.vv:19:3: notice: `>` is deprecated and will soon be forbidden - just state the timeout in nanoseconds
   17 |             a++
   18 |         }
   19 |         > 50 * time.millisecond {
      |         ^
   20 |             println('timeout')
   21 |         }
vlib/v/parser/tests/select_bad_key_1.vv:39:8: error: select key: receive expression expected
   37 | fn f3_bad(ch1 chan St) {
   38 |     select {
   39 |         b := 17 {
      |              ~~
   40 |             println(b)
   41 |         }
